Добавлена выборка заданий по состоянию, создание и удаление задания.

--- a/src/main/resources/templates/tasks/old.html
+++ b/src/main/resources/templates/tasks/old.html
@@ -48,7 +48,8 @@
                     <td th:text="${task.done}"></td>
                 </tbody>
             </table>
-            <a th:href="@{/tasks/list}" class="btn btn-primary w-50">Задачи</a>
-        </div>
+            <div>
+                <a th:href="@{/tasks}" class="btn btn-primary w-50">Задачи</a>
+            </div>
     </div>
 </html>
