--- a/src/main/resources/templates/tasks/list.html
+++ b/src/main/resources/templates/tasks/list.html
@@ -38,7 +38,7 @@
                 <table class="table table-striped table-dark">
                     <thead>
                     <tr>
-                        <th class="col-1">Описание</th>
+                        <th class="col-1">Номер</th>
                         <th class="col-1">Примечание</th>
                         <th class="col-1">Время создания</th>
                         <th class="col-1">Статус</th>
@@ -46,13 +46,14 @@
                     </thead>
                     <tbody>
                     <tr th:each="task: ${tasks}">
-                        <td><a th:href="@{/tasks/{id}(id=${task.id})}" th:text="${task.description}"></a></td>
+                        <td><a th:href="@{/tasks/{id}(id=${task.id})}" th:text="${task.id}"></a></td>
                         <td th:text="${task.title}"></td>
                         <td th:text="${task.created}"></td>
                         <td th:text="${task.done}"></td>
                     </tbody>
                 </table>
-                <a th:href="@{/tasks/new}" class="btn btn-primary w-50">Добавить задание</a>
+            <div>
+                <a th:href="@{tasks/create}" class="btn btn-primary w-50">Добавить задание</a>
             </div>
         </div>
     </div>
