--- a/src/main/resources/templates/tasks/new.html
+++ b/src/main/resources/templates/tasks/new.html
@@ -14,7 +14,7 @@
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
 
-    <title>Новые задачи</title>
+    <title>Выполненные задачи</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -30,25 +30,26 @@
         </div>
     </nav>
     <div class="container">
-            <div class="row">
-                <table class="table table-striped table-dark">
-                    <thead>
-                    <tr>
-                        <th class="col-1">Описание</th>
-                        <th class="col-1">Примечание</th>
-                        <th class="col-1">Время создания</th>
-                        <th class="col-1">Статус</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="task: ${tasks}">
-                        <td th:text="${task.description}"></td>
-                        <td th:text="${task.title}"></td>
-                        <td th:text="${task.created}"></td>
-                        <td th:text="${task.done}"></td>
-                    </tbody>
-                </table>
-            <a th:href="@{/tasks/list}" class="btn btn-primary w-50">Задачи</a>
+        <div class="row">
+            <table class="table table-striped table-dark">
+                <thead>
+                <tr>
+                    <th class="col-1">Описание</th>
+                    <th class="col-1">Примечание</th>
+                    <th class="col-1">Время создания</th>
+                    <th class="col-1">Статус</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="task: ${tasks}">
+                    <td th:text="${task.description}"></td>
+                    <td th:text="${task.title}"></td>
+                    <td th:text="${task.created}"></td>
+                    <td th:text="${task.done}"></td>
+                </tbody>
+            </table>
+            <div>
+            <a th:href="@{/tasks}" class="btn btn-primary w-50">Задачи</a>
         </div>
     </div>
 </html>
