--- a/src/main/resources/templates/tasks/one.html
+++ b/src/main/resources/templates/tasks/one.html
@@ -36,8 +36,16 @@
                 <p th:text="${tasks.description}"></p>
             </td>
             <a th:href="@{/tasks/new}" class="btn btn-primary w-50">Выполнить</a>
-            <a th:href="@{/templates/tasks/update.html}" class="btn btn-primary w-50">Редактировать</a>
-            <a th:href="@{/tasks/new}" class="btn btn-primary w-50">Удалить</a>
+            <a th:href="@{/templates/tasks/update}" class="btn btn-primary w-50">Редактировать</a>
+            <div class="mb-3 row">
+                <div class="col-6"></div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-4"><a class="btn btn-danger w-100"
+                                              th:href="@{/tasks/delete/{id}(id=${tasks.id})}">Удалить</a></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </html>
