--- a/src/main/resources/templates/tasks/create.html
+++ b/src/main/resources/templates/tasks/create.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
     <div class="container">
-        <form class="mt-3" th:action="@{tasks/create}" method="post">
+        <form class="mt-3" th:action="@{/create}" method="post">
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Описание</b></label>
                 <textarea class="form-control" id="description" name="description" rows="25"
