--- a/src/main/resources/templates/tasks/create.html
+++ b/src/main/resources/templates/tasks/create.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
     <div class="container">
-        <form class="mt-3" th:action="@{/create}" method="post">
+        <form class="mt-3" th:action="@{/tasks/create}" method="post">
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Описание</b></label>
                 <textarea class="form-control" id="description" name="description" rows="25"
@@ -39,12 +39,6 @@
             <div class="mb-3">
                 <label for="title" class="form-label"><b>Примечание</b></label>
                 <input type="text" class="form-control" id="title" name="title" placeholder="Краткое примечание">
-            </div>
-            <div class="mb-3">
-                <label for="title" class="form-label"><b>Время</b></label>
-                <label for="created"></label><input type="datetime-local" class="form-control" id="created"
-                                                    name="created"
-                                                    placeholder="Время создания задачи">
             </div>
             <div class="form-check mb-3">
                 <input type="checkbox" name="done" class="form-check-input" id="done">
