--- a/src/main/resources/templates/tasks/one.html
+++ b/src/main/resources/templates/tasks/one.html
@@ -34,18 +34,26 @@
             <td>
                 <p class="text-secondary bg-dark">Описание</p>
                 <p th:text="${tasks.description}"></p>
+                <input type="hidden" name="id" th:field="*{id}">
             </td>
-            <a th:href="@{/tasks/new}" class="btn btn-primary w-50">Выполнить</a>
-            <a th:href="@{/templates/tasks/update}" class="btn btn-primary w-50">Редактировать</a>
-            <div class="mb-3 row">
-                <div class="col-6"></div>
-                <div class="col-6">
-                    <div class="row">
-                        <div class="col-4"><a class="btn btn-danger w-100"
-                                              th:href="@{/tasks/delete/{id}(id=${tasks.id})}">Удалить</a></div>
-                    </div>
+            <div class="row">
+                <div class="col-4"><a class="btn btn-primary w-50"
+                                      th:href="@{/tasks/update/{id}(id=${tasks.id})}">Обновить</a></div>
+            </div>
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-4"><a class="btn btn-danger w-100"
+                                          th:href="@{/tasks/updatDone}">Выполнить</a></div>
+                </div>
+            </div>
+            <div class="col-6"></div>
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-4"><a class="btn btn-danger w-100"
+                                          th:href="@{/tasks/delete/{id}(id=${tasks.id})}">Удалить</a></div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </html>
