--- a/src/main/resources/templates/tasks/update.html
+++ b/src/main/resources/templates/tasks/update.html
@@ -14,7 +14,7 @@
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
 
-    <title>Новые задачи</title>
+    <title>Редактирование задачи</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -30,25 +30,21 @@
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <table class="table table-striped table-dark">
-                <thead>
-                <tr>
-                    <th class="col-1">Описание</th>
-                    <th class="col-1">Примечание</th>
-                    <th class="col-1">Время создания</th>
-                    <th class="col-1">Статус</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="task: ${tasks}">
-                    <td th:text="${task.description}"></td>
-                    <td th:text="${task.title}"></td>
-                    <td th:text="${task.created}"></td>
-                    <td th:text="${task.done}"></td>
-                </tbody>
-            </table>
-            <a th:href="@{/tasks/list}" class="btn btn-primary w-50">Задачи</a>
-        </div>
+        <form class="mt-3" th:action="@{/tasks/update}" method="post" th:object="${task}">
+            <input name="id" th:field="*{id}" type="hidden">
+            <div class="mb-3">
+                <label for="description" class="form-label"><b>Описание</b></label>
+                <input type="text" class="form-control" id="description" name="name"  th:field="${task.description}"
+                       placeholder="Описание задачи">
+            </div>
+            <div class="row">
+                <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/tasks}">Отмена</a></div>
+                <div class="col-6">
+                    <button class="btn btn-primary w-100" type="submit">Сохранить</button>
+                </div>
+            </div>
+        </form>
     </div>
+</div>
+</body>
 </html>
