--- a/src/main/resources/templates/tasks/one.html
+++ b/src/main/resources/templates/tasks/one.html
@@ -29,6 +29,8 @@
             </div>
         </div>
     </nav>
+</div>
+
     <div class="container">
         <div class="row">
             <td>
@@ -36,10 +38,9 @@
                 <p th:text="${tasks.description}"></p>
                 <input type="hidden" name="id" th:field="*{id}">
             </td>
-            <div class="row">
+            <div class="col-10">
                 <div class="col-4"><a class="btn btn-primary w-50"
                                       th:href="@{/tasks/update/{id}(id=${tasks.id})}">Обновить</a></div>
-            </div>
             <div class="col-6">
                 <div class="row">
                     <div class="col-4"><a class="btn btn-danger w-100"
@@ -56,4 +57,5 @@
         </div>
     </div>
 </div>
+</body>
 </html>
