--- a/src/main/resources/templates/tasks/update.html
+++ b/src/main/resources/templates/tasks/update.html
@@ -29,12 +29,14 @@
             </div>
         </div>
     </nav>
+</div>
+
     <div class="container">
         <form class="mt-3" th:action="@{/tasks/update}" method="post" th:object="${task}">
-            <input name="id" th:field="*{id}" type="hidden">
+            <input type="hidden" name="id" th:field="*{id}">
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Описание</b></label>
-                <input type="text" class="form-control" id="description" name="name"  th:field="${task.description}"
+                <input type="text" class="form-control" id="description" name="description"  th:field="${task.description}"
                        placeholder="Описание задачи">
             </div>
             <div class="row">
@@ -45,6 +47,6 @@
             </div>
         </form>
     </div>
-</div>
+
 </body>
 </html>
