--- a/src/main/resources/templates/tasks/one.html
+++ b/src/main/resources/templates/tasks/one.html
@@ -34,28 +34,21 @@
     <div class="container">
         <div class="row">
             <td>
-                <p class="text-secondary bg-dark">Описание</p>
+                <p class="text-secondary bg-dark">Подробное описание задачи</p>
                 <p th:text="${tasks.description}"></p>
-                <input type="hidden" name="id" th:field="*{id}">
             </td>
-            <div class="col-10">
-                <div class="col-4"><a class="btn btn-primary w-50"
-                                      th:href="@{/tasks/update/{id}(id=${tasks.id})}">Обновить</a></div>
-            <div class="col-6">
-                <div class="row">
-                    <div class="col-4"><a class="btn btn-danger w-100"
-                                          th:href="@{/tasks/updatDone}">Выполнить</a></div>
-                </div>
-            </div>
-            <div class="col-6"></div>
-            <div class="col-6">
-                <div class="row">
-                    <div class="col-4"><a class="btn btn-danger w-100"
-                                          th:href="@{/tasks/delete/{id}(id=${tasks.id})}">Удалить</a></div>
+                <div class="col-10">
+                    <div class="row">
+                        <div class="col-4"><a class="btn btn-primary w-50 btn-update"
+                                              th:href="@{/tasks/update/{id}(id=${tasks.id})}">Обновить</a></div>
+                        <div class="col-4"><a class="btn btn-success w-50 btn-done"
+                                              th:href="@{/tasks/updateDone/{id}(id=${tasks.id})}">Выполнить</a></div>
+                        <div class="col-4"><a class="btn btn-danger w-50 btn-delete"
+                                              th:href="@{/tasks/delete/{id}(id=${tasks.id})}">Удалить</a></div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+
 </body>
 </html>
