--- a/src/main/resources/templates/tasks/old.html
+++ b/src/main/resources/templates/tasks/old.html
@@ -45,7 +45,7 @@
                     <td th:text="${task.description}"></td>
                     <td th:text="${task.title}"></td>
                     <td th:text="${task.created}"></td>
-                    <td th:text="${task.done}"></td>
+                    <td th:text="${task.done == true ? 'выполнено' : 'не выполнено'}"></td>
                 </tbody>
             </table>
             <div>
