--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,15 +27,25 @@
                     <a class="nav-item nav-link active" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/tasks}">Задачи</a>
                 </div>
+                <div class="d-flex" th:if="${user.name == 'Гость'}">
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
+                </div>
+                <div class="d-flex" th:if="${user.name != 'Гость'}">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
+                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
+                </div>
             </div>
         </div>
     </nav>
+
     <div class="container mt-2">
         <h3>Проект трекера задач</h3>
         <ul>
             <li><a th:href="@{/tasks}">Задачи</a></li>
         </ul>
     </div>
+
 </div>
 </body>
 </html>
