--- a/src/main/resources/templates/tasks/list.html
+++ b/src/main/resources/templates/tasks/list.html
@@ -32,6 +32,7 @@
                 </div>
                 <div class="d-flex" th:if="${user.name != 'Гость'}">
                     <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.timezone}"></a>
                     <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
                 </div>
             </div>
@@ -59,13 +60,13 @@
                     <tr th:each="task: ${tasks}">
                         <td><a th:href="@{/tasks/{id}(id=${task.id})}" th:text="${task.id}"></a></td>
                         <td th:text="${task.title}"></td>
-                        <td th:text="${task.created}"></td>
+                        <td th:text="${#temporals.format(task.created, 'HH:mm dd-MM')}"></td>
                         <td th:text="${task.done == true ? 'выполнено' : 'не выполнено'}"></td>
                         <td th:text="${task.user != null ? task.user.name : ''}"></td>
                         <td th:text="${task.priority.name}"></td>
                         <td>
                         <span th:if="${not #lists.isEmpty(task.categories)}">
-                       <span th:each="category, iterStat : ${task.categories}">
+                        <span th:each="category, iterStat : ${task.categories}">
                          <span th:text="${category.name}"></span>
                            <span th:if="${not iterStat.last}">, </span>
                             </span>
